# stroma

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
api/checkpoint/: index.html
api/contracts/: index.html
api/cost/: index.html
api/crewai/: index.html
api/deepagents/: index.html
api/failures/: index.html
api/langgraph/: index.html
api/middleware/: index.html
api/runner/: index.html
api/trace/: index.html
architecture/universal-reliability-layer/: index.html
changelog/: index.html
concepts/: index.html
docs/: concepts.md  extending.md  index.md  quickstart.md  vs-langgraph.md
docs/api/: checkpoint.md  contracts.md  cost.md  crewai.md  deepagents.md  failures.md  langgraph.md  middleware.md  runner.md  trace.md
docs/architecture/: universal-reliability-layer.md
docs/examples/agentic_loop/: README.md
docs/examples/conversation_driven/: README.md
docs/examples/declarative/: README.md  with_stroma.py
docs/tutorial/: adding-contracts.md  checkpointing.md  cost-control.md  deepagents.md  first-pipeline.md  hooks.md  index.md  langgraph.md  parallel.md  retry-and-failures.md  shared-context.md  tracing.md
examples/: checkpoint_resume.py  langgraph_integration.py  retry_demo.py  simple_pipeline.py
examples/agentic_loop/: agent.py  index.html  with_stroma.py
examples/conversation_driven/: agent.py  index.html  with_stroma.py
examples/declarative/: agent.py  index.html
extending/: index.html
quickstart/: index.html
search/: search_index.json
src/: __init__.py  checkpoint.py  failures.py  runner.py
src/adapters/: __init__.py
src/stroma/: __init__.py  checkpoint.py  contracts.py  cost.py  failures.py  middleware.py  runner.py  trace.py
src/stroma/adapters/: __init__.py  base.py  crewai.py  deepagents.py  langgraph.py
tests/: test_checkpoint.py  test_contracts.py  test_cost.py  test_failures.py  test_middleware.py  test_runner.py  test_step_aliases.py  test_trace.py
tests/adapters/: test_crewai.py  test_deepagents.py  test_langgraph.py  test_protocols.py
tutorial/: index.html
tutorial/adding-contracts/: index.html
tutorial/checkpointing/: index.html
tutorial/cost-control/: index.html
tutorial/deepagents/: index.html
tutorial/first-pipeline/: index.html
tutorial/hooks/: index.html
tutorial/langgraph/: index.html
tutorial/parallel/: index.html
tutorial/retry-and-failures/: index.html
tutorial/shared-context/: index.html
tutorial/tracing/: index.html
vs-langgraph/: index.html
