[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroma"
version = "0.2.2"
description = "Framework-agnostic agent reliability primitives for enforcing contracts, checkpointing, tracing, and execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pydantic>=2.0",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["agents", "reliability", "contracts", "checkpointing", "tracing", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jengroff/stroma"
Repository = "https://github.com/jengroff/stroma"
Issues = "https://github.com/jengroff/stroma/issues"

[project.optional-dependencies]
redis = ["redis>=5.0"]
langgraph = ["langgraph>=0.2"]
dev = ["pytest", "pytest-asyncio>=0.23", "pytest-cov", "ruff", "ty"]
docs = ["mkdocs>=1.6.1", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stroma*"]

[tool.setuptools.package-data]
stroma = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["N818"]

[dependency-groups]
dev = [
    "ty>=0.0.27",
]
